--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,15 +96,17 @@ p{  margin-right: 15px;
 /* this is for the grid section  portofolio   */
  .content_sectionP{ 
               max-width: 600px;
-                background-color:#ffffff;
-                margin-left: 29px;
-                border: 3px solid #dddddd;
-    }
+              background-color:#ffffff;
+              margin-left: 29px;
+              border: 3px solid #dddddd;
+       
+            }
+
 
     .contentP_div h1{ color:#4aaaa5;
                              padding-left: 20px;
 
-
+                             font-family: 'Georgia', Times, Times New Roman, serif;
                      }
            
 
@@ -137,6 +139,7 @@ p{  margin-right: 15px;
                 font-family:'Georgia', Times, Times New Roman, serif;
                 margin:0;
                 height: 20px;
+                line-height: 20px;
                 width: 160px;
                 text-align: center;
                 margin-top: -30px;
@@ -151,6 +154,7 @@ p{  margin-right: 15px;
 
 
 .content_section h1{ clear: both;
+    font-family: 'Georgia', Times, Times New Roman, serif;
                 } 
            
                                  
@@ -173,6 +177,7 @@ form{ padding-left:20px;}
 .submit{   margin-top: 10px;
            margin-bottom: 10px;
            background-color: #4aaaa5;
+           color:white;
            height: 35px;
            width: 85px;
         
@@ -216,8 +221,9 @@ form{ padding-left:20px;}
                                 } */
                                  
                                .content_section{ 
-                                         width: 92%;
-                                            
+                                         width: 60%;
+                                         margin-left: 28px;
+                                         margin-top:30px;
                                  }
                 
                                   .content_sectionP{ 
@@ -249,13 +255,40 @@ form{ padding-left:20px;}
                       width: 225px;} */
                                 
                 /* ##############################################################*/                                                          
+               
+                .contentP_div
+                 {    min-width:533px; }
+
+
+                .content_section{ 
+                    width: 90%;
+                    margin-left: 28px;
+                    margin-top:30px;
+            }
+
+
+            .content_sectionP{ 
+                width: 90%;
+                margin-top: 20px;  
                 
-                .grid{ width:280px;
-                    grid-template-columns: 300px;
-                    grid-template-rows: repeat(5,220px);
+                /*
+                   background-color:#ffffff;
+                   margin-left: 29px;
+                   border: 3px solid #dddddd; */
+                   
+              }
+
+
+                .grid{ width:500px;
+                    grid-template-columns: 220px 220px;
+                    grid-template-rows: repeat(3,220px);
                     grid-row-gap: 5px;
                     grid-column-gap:0px;
-                        }
+                    padding-left:0px;      
+                  
+                    justify-items:center;
+                    justify-content: center;
+                }
                 
                 
                         .port {position: relative;
@@ -301,7 +334,9 @@ form{ padding-left:20px;}
             @media only screen and (max-width: 640px) 
             {
                body{
-                     width: 80%;
+                     
+                    
+                     width: 482px;
                      min-width: 375px;
                      margin-left:0px;
                     }
@@ -349,15 +384,18 @@ form{ padding-left:20px;}
                             padding-left: 0px;    
                          }
 
-                         .grid{ width:280px;
+                         .grid{ width:300px;
                             grid-template-columns: 300px;
                             grid-template-rows: repeat(5,220px);
-                            grid-row-gap: 5px;
+                            grid-row-gap: 20px;
                             grid-column-gap:0px;
                            
                         }
                         
-                                                           
+                        
+
+
+
                           
                          .About{padding-left: 4px;   }
                         
@@ -371,8 +409,8 @@ form{ padding-left:20px;}
 
 
                          .Pic{ 
-                              width: 200px;
-                              height:  200px;
+                              width: 225px;
+                              height:  225px;
                               object-fit: fill;
 
                          }
@@ -380,11 +418,13 @@ form{ padding-left:20px;}
                           
                             
                             .port_label{ height: 26px;
-                                        width: 100%;
-                                        margin-top: -20px;}
+                                        width: 225px;
+                                        margin-top: -30px;
+                                       line-height: 26px;
+                                        }
 
                                        .contentP_div{
-                                            width:100%;
+                                            width:85%;
                                             min-width: 365px;
                                             margin-top:30px;    
                                             height: auto;                                                 
@@ -394,7 +434,7 @@ form{ padding-left:20px;}
                                     .content_section{
                                                      width:90%;
                                                      margin-left: 18px;  
-                                                    
+                                                     margin-top: 20px;
                                                     
                                                     }
 
@@ -412,14 +452,15 @@ form{ padding-left:20px;}
                                                             width:85%;
                                                             margin-left: 10px; 
                                                             vertical-align: middle;
+                                                            min-width:none;
                                                            }
 
                                         
                                         
                                         hr{ width: 80%;}
                                         footer{                                     
-                                            width: 80%;
-                                            min-width: 375px;
+                                            width:409px;
+                                           
                                          }
                                          .name, .email, .message{ width: 80%;}
 
